JOC-1255 schedule release